Function to read a collection of BAMs in arbitrary order, sort them as necessary and merge them into one sorted stream.