@@ -28,11 +28,14 @@ import com.google.common.collect.Interners;
 import htsjdk.samtools.*;
 import htsjdk.samtools.util.CloseableIterator;
 import htsjdk.samtools.util.IOUtil;
+import org.broadinstitute.dropseqrna.utils.CustomBAMIterators;
 import picard.PicardException;
 
 import java.io.File;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 /**
  * Utilities for creating a single stream of SAMRecords from multiple input files.
@@ -50,9 +53,9 @@ public class SamFileMergeUtil {
         if (inputs.isEmpty()) {
             throw new IllegalArgumentException("At least one input must be provided");
         }
-        final List<SamReader> readers = new ArrayList<SamReader>(inputs.size());
-        final List<SAMFileHeader> headers = new ArrayList<SAMFileHeader>(inputs.size());
-        final Interner<SAMSequenceDictionary> sequenceDictionaryInterner =Interners.newStrongInterner();
+        final List<SamReader> readers = new ArrayList<>(inputs.size());
+        final List<SAMFileHeader> headers = new ArrayList<>(inputs.size());
+        final Interner<SAMSequenceDictionary> sequenceDictionaryInterner = Interners.newStrongInterner();
         SAMFileHeader.SortOrder inputSortOrder = null;
         for (final File inFile : inputs) {
             IOUtil.assertFileIsReadable(inFile);
@@ -65,14 +68,14 @@ public class SamFileMergeUtil {
                     inputSortOrder = header.getSortOrder();
                 } else if (header.getSortOrder() != inputSortOrder) {
                     throw new PicardException(String.format("Sort order(%s) of %s does not agree with sort order(%s) of %s",
-                            header.getSortOrder(), inFile.getAbsolutePath(), inputSortOrder, inputs.get(0).getAbsolutePath()));
+                            header.getSortOrder(), inFile.getAbsolutePath(), inputSortOrder, inputs.getFirst().getAbsolutePath()));
                 }
             }
             headers.add(header);
         }
 
         if (inputs.size() == 1) {
-            return new SamHeaderAndIterator(headers.get(0), readers.get(0).iterator());
+            return new SamHeaderAndIterator(headers.getFirst(), readers.getFirst().iterator());
         } else {
             final SAMFileHeader.SortOrder outputSortOrder;
             if (maintainSort) {
@@ -95,12 +98,38 @@ public class SamFileMergeUtil {
     }
 
     /**
-     *
      * @param maintainSort If true, all inputs must be sorted the same way, and they are merge sorted.  If false, inputs
      *                     are merged in arbitrary order.
      */
     public static SamHeaderAndIterator mergeInputs(final List<File> inputs,
                                                    final boolean maintainSort) {
         return mergeInputs(inputs, maintainSort, SamReaderFactory.makeDefault());
+    }
+
+    /**
+     * Read a collection of BAMs in the desired order.  Headers must have compatible sequence dictionaries.
+     * @param inputs one or more BAMs, in any order.
+     * @param sortOrder Desired sort order
+     * @param samReaderFactory
+     * @return
+     */
+    public static SamHeaderAndIterator mergeInputs(final List<File> inputs,
+                                                   final SAMFileHeader.SortOrder sortOrder,
+                                                   final SamReaderFactory samReaderFactory,
+                                                   final boolean mergeDictionaries) {
+        final List<SamReader> readers = inputs.stream().map(samReaderFactory::open).toList();
+        final SamFileHeaderMerger headerMerger = new SamFileHeaderMerger(sortOrder, readers.stream().map(SamReader::getFileHeader).toList(), mergeDictionaries);
+        final CloseableIterator<SAMRecord> iterator;
+        if (sortOrder == SAMFileHeader.SortOrder.unsorted) {
+            iterator = new UnsortedMergingSamRecordIterator(headerMerger.getMergedHeader(), readers);
+        } else {
+            final Map<SamReader, CloseableIterator<SAMRecord>> map = new HashMap<>(readers.size());
+            for (final SamReader reader : readers) {
+                map.put(reader,
+                        CustomBAMIterators.getSortedRecords(new SamHeaderAndIterator(reader.getFileHeader(), reader.iterator()), sortOrder));
+            }
+            iterator = new MergingSamRecordIterator(headerMerger, map, true);
+        }
+        return new SamHeaderAndIterator(headerMerger.getMergedHeader(), iterator);
     }
 }
